flux/apps/base/dental-website/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: dental-website
  labels:
    pod-security.kubernetes.io/enforce: restricted
    pod-security.kubernetes.io/warn: restricted
  annotations:
    kustomize.toolkit.fluxcd.io/prune: disabled
