flux/apps/base/dental-website/deployment.yaml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: dental-website
  namespace: dental-website
spec:
  replicas: 1
  selector:
    matchLabels:
      app: dental-website
  template:
    metadata:
      labels:
        app: dental-website
    spec:
      imagePullSecrets:
        - name: registry-pull
      containers:
        - name: dental-website
          image: registry.aquilla.dev/aquilla/dental-website:0.0.20
          ports:
            - name: http
              containerPort: 3000
          securityContext:
            runAsNonRoot: true
            runAsUser: 1000
            allowPrivilegeEscalation: false
            readOnlyRootFilesystem: true
            capabilities:
              drop: ["ALL"]
          # make only next cache writable
          volumeMounts:
            - name: next-cache
              mountPath: /app/.next/cache
            - name: tmp
              mountPath: /tmp
          resources:
            limits:
              cpu: "1"
              memory: 512Mi
          readinessProbe:
            tcpSocket:
              port: 3000
            initialDelaySeconds: 5
            periodSeconds: 10
      volumes:
        - name: next-cache
          emptyDir: {}
        - name: tmp
          emptyDir: {}
