flux/apps/base/dental-website/service.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: dental-website
  namespace: dental-website
spec:
  selector:
    app: dental-website
  ports:
    - name: http
      port: 3000
      targetPort: http
